--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ var _hmt = _hmt || [];
 
 
 </head>
-<body style="background-image: url('img/2016.jpg');background-repeat: repeat;">
+<body>
 	<div class="container">
 		<div class="row">
 			<div class="col-xs-4 col-md-4">
